# CN_LAB7

./: CMakeLists.txt  README.md  run.sh
Client/: Client  Client.cpp  MySocket.h  Packet.cpp  Packet.h  a.out
LogFile/: Client.ERROR  Client.FATAL  Client.INFO  Client.WARNING  Client.momo.zimo.log.INFO.20241210-170830.26611  Client.momo.zimo.log.INFO.20241210-180016.37124  Client.momo.zimo.log.INFO.20241210-180235.37660  Client.momo.zimo.log.INFO.20241210-180506.38557  Client.momo.zimo.log.INFO.20241210-200105.49204  Client.momo.zimo.log.INFO.20241210-202001.53889  Client.momo.zimo.log.INFO.20241210-202158.54715  Client.momo.zimo.log.INFO.20241210-210531.62313  Client.momo.zimo.log.INFO.20241210-210532.62331  Client.momo.zimo.log.INFO.20241210-210533.62346  Client.momo.zimo.log.INFO.20241210-210534.62378  Client.momo.zimo.log.INFO.20241210-210535.62389  Client.momo.zimo.log.INFO.20241210-210732.62815  Client.momo.zimo.log.INFO.20241210-210733.62833  Client.momo.zimo.log.INFO.20241210-210734.62851  Client.momo.zimo.log.INFO.20241210-210735.62873  Client.momo.zimo.log.INFO.20241210-210736.62890  Client.momo.zimo.log.WARNING.20241210-170147.25229  Server.ERROR  Server.INFO  Server.WARNING  Server.momo.zimo.log.ERROR.20241210-201809.53376  Server.momo.zimo.log.ERROR.20241210-202058.54207  Server.momo.zimo.log.ERROR.20241210-202110.54370  Server.momo.zimo.log.INFO.20241210-201626.52816  Server.momo.zimo.log.INFO.20241210-201804.53301  Server.momo.zimo.log.INFO.20241210-201926.53676  Server.momo.zimo.log.INFO.20241210-201948.53827  server.ERROR  server.INFO  server.WARNING  (+6 more)
(+272 files in other folders)
